--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -18,7 +18,7 @@
         android:hint="IMIĘ :"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
         android:hint="HASŁO :"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -58,7 +58,7 @@
         android:hint="LOGIN:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -78,7 +78,7 @@
         android:hint="E-MAIL :"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -98,7 +98,7 @@
         android:hint="NAZWISKO :"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
